// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> render header with title and subtitle 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "justifyContent": "center",
      "padding": 24,
      "resizeMode": "cover",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/background.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <Text
    style={
      Object {
        "color": "white",
        "fontFamily": "Avenir LT Std",
        "fontSize": 20,
        "fontWeight": "bold",
        "lineHeight": 23,
        "textAlign": "center",
      }
    }
  >
    Test title
  </Text>
  <Text
    style={
      Object {
        "color": "white",
        "fontFamily": "Avenir LT Std",
        "fontSize": 14,
        "lineHeight": 16,
        "marginTop": 12,
        "textAlign": "center",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus ipsum nec sapien pretium iaculis. Vestibulum condimentum sapien vitae felis consequat maximus.
  </Text>
</View>
`;

exports[`<Header /> render header with title only 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "justifyContent": "center",
      "padding": 24,
      "resizeMode": "cover",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/background.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <Text
    style={
      Object {
        "color": "white",
        "fontFamily": "Avenir LT Std",
        "fontSize": 20,
        "fontWeight": "bold",
        "lineHeight": 23,
        "textAlign": "center",
      }
    }
  >
    Test title
  </Text>
</View>
`;
